// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`node-version default 1`] = `
"{
  \\"options\\": {
    \\"ts\\": false,
    \\"tslint\\": false,
    \\"es\\": false,
    \\"eslint\\": false,
    \\"editorconfig\\": false,
    \\"prettier\\": false,
    \\"stylelint\\": false,
    \\"gitignore\\": false,
    \\"npmrc\\": false,
    \\"readme\\": false,
    \\"githooks\\": false,
    \\"commitlint\\": false,
    \\"nodeVersion\\": true,
    \\"webpack\\": false,
    \\"install\\": false,
    \\"force\\": true,
    \\"dryRun\\": false,
    \\"mode\\": \\"cli\\"
  },
  \\"mergedFiles\\": {
    \\"package.json\\": {
      \\"override\\": false,
      \\"data\\": {
        \\"engines\\": {
          \\"node\\": \\">=10\\"
        }
      }
    },
    \\".node-version\\": {
      \\"override\\": false,
      \\"data\\": \\"10.15.0\\"
    }
  }
}"
`;

exports[`node-version default 2`] = `"10.15.0"`;

exports[`node-version default 3`] = `
"{
  \\"engines\\": {
    \\"node\\": \\">=10\\"
  }
}"
`;

exports[`node-version with-githooks 1`] = `
"{
  \\"options\\": {
    \\"ts\\": false,
    \\"tslint\\": false,
    \\"es\\": false,
    \\"eslint\\": false,
    \\"editorconfig\\": false,
    \\"prettier\\": false,
    \\"stylelint\\": false,
    \\"gitignore\\": false,
    \\"npmrc\\": false,
    \\"readme\\": false,
    \\"githooks\\": true,
    \\"commitlint\\": false,
    \\"nodeVersion\\": true,
    \\"webpack\\": false,
    \\"install\\": false,
    \\"force\\": true,
    \\"dryRun\\": false,
    \\"mode\\": \\"cli\\"
  },
  \\"mergedFiles\\": {
    \\"package.json\\": {
      \\"override\\": false,
      \\"data\\": {
        \\"engines\\": {
          \\"node\\": \\">=10\\"
        }
      }
    },
    \\".node-version\\": {
      \\"override\\": false,
      \\"data\\": \\"10.15.0\\"
    },
    \\".huskyrc\\": {
      \\"override\\": false,
      \\"data\\": \\"# ~/.huskyrc\\\\n# Note: it will run in /bin/sh shell\\\\nif command -v nodenv >/dev/null 2>&1; then\\\\n  eval \\\\\\"$(nodenv init -)\\\\\\"\\\\nfi\\"
    }
  }
}"
`;

exports[`node-version with-githooks 2`] = `
"# ~/.huskyrc
# Note: it will run in /bin/sh shell
if command -v nodenv >/dev/null 2>&1; then
  eval \\"$(nodenv init -)\\"
fi"
`;

exports[`node-version with-githooks 3`] = `"10.15.0"`;

exports[`node-version with-githooks 4`] = `
"{
  \\"engines\\": {
    \\"node\\": \\">=10\\"
  }
}"
`;
